Fix alignment of long-running simple events
In the timeline, when simple events text runs on multiple lines,
the box moves to the left, which makes it look ugly.

See http://imgur.com/a/jElJi for an example.

Borrow CSS from the comment event to properly display the event
in such cases.

--- a/src/theme/base/discussion.less
+++ b/src/theme/base/discussion.less
@@ -45,6 +45,9 @@
             display: inline-block;
             margin: 0;
             position: relative;
+            left: 32px;
+            width: calc(100% - 32px);
+            top: -28px;
 
             &::before {
                 content: '';
